--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,6 +15,7 @@ body {
   margin: 0 auto;
   max-width: 980px;
   min-width: 320px;
+  position: relative;
 }
 
 .row {
@@ -29,11 +30,44 @@ body {
   flex-basis: 1;
 }
 
-.btn {
-  font-size: 1rem;
+.card {
+  background: #fff;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  padding: 2rem 2rem 6rem;
+  width: 320px;
+  position: relative;
+  border-radius: 0.25rem 0.25rem 10px 10px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+  color: #fff;
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
   padding: 0.375rem 0.75rem;
+  height: 60px;
+  width: 100%;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border: none;
+  border-radius: 0 0 0.25rem 0.25rem;
+  transition: 0.1s ease;
+  cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover,
+  &:active {
+    background-color: #0069d9;
+    border-color: #0062cc;
+  }
 
   &__primary {
     color: #fff;
